<resources>
    <string name="app_name">Inventory App</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone_number">Supplier Contact</string>
    <string name="save">Save</string>
    <string name="not_valid_insert">All information must be filled in.</string>
    <string name="insert_success">Product information inserted successfully!</string>
    <string name="editor_activity_title">Editor Activity</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="sale">Sale</string>
    <string name="unsuccessful_insert">Insert was unsuccessful</string>
    <string name="details">Details</string>
    <string name="inventory_extra">INVENTORY_EXTRA</string>
    <string name="details_activity_title">Details Activity</string>
    <string name="decrease">Decrease</string>
    <string name="increase">Increase</string>
    <string name="delete">Delete</string>
    <string name="successful_deletion">Product successfully removed from inventory.</string>
    <string name="detailes_deleted_extra">Details_Deleted_EXTRA</string>
    <string name="already_deleted">Product already deleted.</string>
    <string name="delete_all_products">Delete All Products</string>
    <string name="warning_all_delete">Warning! This will delete all products and cannot be undone. Proceed?</string>
    <string name="yes_delete_all">Yes</string>
    <string name="no_delete_all">No</string>
    <string name="success_all_delete">Successfully deleted all products</string>
    <string name="product_name_extra">Product_Name_Extra</string>
    <string name="price_extra">Price_Extra</string>
    <string name="quantity_extra">Quantity_Extra</string>
    <string name="supplier_extra">Supplier_Extra</string>
    <string name="supplier_contact_extra">Supplier_Contact_Extra</string>
    <string name="instructions_to_add">Add a product by clicking on the button below! Enter the details of the product on the next screen and save it with the heart button on top.</string>
    <string name="edit">Edit</string>
    <string name="editing_id_extra">EDITING_EXTRA</string>
    <string name="update_failure">Could not update inventory.</string>
    <string name="update_success">Update successful!</string>
</resources>
