<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:showIn="@layout/activity_editor"
    >

    <TextView
        android:id="@+id/tv_productNameLabel"
        android:text="@string/product_name"
        android:labelFor="@id/et_productName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/et_productName"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="2"
        style="@style/header" />

    <TextView
        android:id="@+id/tv_priceLabel"
        android:text="@string/price"
        android:labelFor="@id/et_price"
        app:layout_constraintTop_toBottomOf="@id/tv_productNameLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/et_price"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="2"
        style="@style/header" />

    <TextView
        android:id="@+id/tv_quantityLabel"
        android:text="@string/quantity"
        android:labelFor="@id/et_quantity"
        app:layout_constraintTop_toBottomOf="@id/tv_priceLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/et_quantity"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="2"
        style="@style/header" />

    <TextView
        android:id="@+id/tv_supplierNameLabel"
        android:text="@string/supplier_name"
        android:labelFor="@id/et_supplierName"
        app:layout_constraintTop_toBottomOf="@id/tv_quantityLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/et_supplierName"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="2"
        style="@style/header" />

    <TextView
        android:id="@+id/tv_supplierPhoneNumberLabel"
        android:text="@string/supplier_phone_number"
        android:labelFor="@id/et_supplierPhoneNumber"
        app:layout_constraintTop_toBottomOf="@id/tv_supplierNameLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/et_supplierPhoneNumber"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_weight="2"
        style="@style/header" />
</merge>