<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="inventory"
            type="com.krinotech.inventoryapp.Inventory" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/grey"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="@color/colorPrimary"
            >

            <TextView
                android:id="@+id/tv_productNameHeader"
                android:text="@string/product_name"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_productName"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintHorizontal_weight="1"
                style="@style/header"
                />

            <TextView
                android:id="@+id/tv_productName"
                android:text="@{inventory.productName}"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/tv_productNameHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintHorizontal_weight="3"
                style="@style/productContent"
                tools:text="Product"
                />

            <TextView
                android:id="@+id/tv_priceHeader"
                android:text="@string/price"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/tv_productName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_quantityHeader"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintHorizontal_weight="1"
                style="@style/header"
                />

            <TextView
                android:id="@+id/tv_quantityHeader"
                android:text="@string/quantity"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/tv_productName"
                app:layout_constraintStart_toEndOf="@id/tv_priceHeader"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintHorizontal_weight="1"
                style="@style/header"
                />

            <TextView
                android:id="@+id/tv_price"
                android:text="@{inventory.priceFormatted}"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/tv_priceHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_quantity"
                app:layout_constraintBottom_toTopOf="@id/btn_sale"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintHorizontal_weight="1"
                style="@style/productContent"
                tools:text="$3.50"
                />

            <TextView
                android:id="@+id/tv_quantity"
                android:text="@{inventory.quantityFormatted}"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/tv_quantityHeader"
                app:layout_constraintStart_toEndOf="@id/tv_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btn_details"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintHorizontal_weight="1"
                style="@style/productContent"
                tools:text="5"
                />

            <Button
                android:id="@+id/btn_sale"
                android:layout_margin="@dimen/margin"
                android:text="@string/sale"
                style="@style/button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_details"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@color/colorAccent"
                />

            <Button
                android:id="@+id/btn_details"
                android:layout_margin="@dimen/margin"
                android:text="@string/details"
                style="@style/button"
                app:layout_constraintStart_toEndOf="@id/btn_sale"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@color/colorAccent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>